@@ -48,6 +48,7 @@ Also allow the creation of elements with their containing Membership in one clic
 Also remove the standard libraries elements in Reference Widget's candidates (when you click in the background part of the widget) for now as it leads to performance issues.
 They will be only accessible through the model browser dialog.
 - https://github.com/eclipse-syson/syson/issues/112[#112] [services] Improves `getAllReachable()` util service, allowing to reduce the time being spent to retrieve the elements of a given type.
+- https://github.com/eclipse-syson/syson/issues/134[#134] [diagrams] Add FeatureTyping Edge tool, in the same way as other existing links such as Subclassification, Redefinition...
 
 === New features
 
